--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,46 +60,46 @@
             <ul>
                 <h2>Чем мы занимаемся</h2>
                 <li>
-                    <img src="/images/img1.jpg" alt="печатает на клавиатуре" width="370">
+                    <img src="./images/img1.jpg" alt="печатает на клавиатуре" width="370">
                 </li>
                 <li>
-                    <img src="/images/img2.jpg" alt="работа с телефоном и компьютером" width="370">
+                    <img src="./images/img2.jpg" alt="работа с телефоном и компьютером" width="370">
                 </li>
                 <li>
-                    <img src="/images/img3.jpg" alt="палитра цветов на планшете" width="370">
+                    <img src="./images/img3.jpg" alt="палитра цветов на планшете" width="370">
                 </li>
             </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <li>
-                <img src="/images/img4.jpg" alt="Игорь Демьяненко" width="270">
-                <h4>Игорь Демьяненко</h4>
+                <img src="./images/img4.jpg" alt="Игорь Демьяненко" width="270">
+                <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="/images/img5.jpg" alt="Ольга Репина" width="270">
-                <h4>Ольга Репина</h4>
+                <img src="./images/img5.jpg" alt="Ольга Репина" width="270">
+                <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="/images/img6.jpg" alt="Николай Тарасов" width="270">
-                <h4>Николай Тарасов</h4>
+                <img src="./images/img6.jpg" alt="Николай Тарасов" width="270">
+                <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="/images/img7.jpg" alt="Михаил Ермаков" width="270">
-                <h4>Михаил Ермаков</h4>
+                <img src="./images/img7.jpg" alt="Михаил Ермаков" width="270">
+                <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
         </section>
     </main>
     <footer>
-        <a href="index.html">WebStudio</a>
+        <a href="index.html"><span>Web</span>Studio</a>
         <address>
             <ul>
                 <li>
-                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    <a href="">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
                     <a href="mailto:info@example.com">info@example.com</a>
@@ -112,3 +112,5 @@
     </footer>
 </body>
 </html>
+
+
